applications/nestos/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: nestos
  name: nestos
