applications/nestos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestos-deployment
  namespace: nestos
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nestos
  template:
    metadata:
      labels:
        app: nestos
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: nestos
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nestos-website:830ce8052de6b0e9f972c292abfff2b69b5bc75a
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 100Mi
