applications/nestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestos-service
  namespace: nestos
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nestos
  type: ClusterIP
